--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "rs-messages-importer",
   "version": "0.1.0",
-  "description": "Scripts for importing chat messages to RemoteStorage accounts",
+  "description": "CLI for importing chat messages to RemoteStorage accounts",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/67P/rs-messages-importer.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
