--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "authors": [
+    "Sebastian Kippe <sebastian@kip.pe>"
+  ],
   "license": "MIT",
   "dependencies": {
     "commander": "^2.8.1",
