--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.30",
     "commander": "^2.8.1",
-    "remotestoragejs": "remotestorage/remotestorage.js#eafe8ce4e975479c511c7685b1c9a70fcef0bebe",
-    "remotestoragejs-modules": "remotestorage/modules#messages-irc"
+    "remotestoragejs": "remotestorage/remotestorage.js#eafe8ce4e975479c511c7685b1c9a70fcef0bebe"
   }
 }
