--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "importer": "babel-node index.js"
   },
   "authors": [
     "Sebastian Kippe <sebastian@kip.pe>"
   ],
   "license": "MIT",
   "dependencies": {
+    "async": "^1.3.0",
+    "babel": "^5.6.14",
     "bluebird": "^2.9.30",
     "commander": "^2.8.1",
     "glob": "^5.0.12",
     "line-reader": "^0.2.4",
+    "progress": "^1.1.8",
     "remotestoragejs": "remotestorage/remotestorage.js#eafe8ce4e975479c511c7685b1c9a70fcef0bebe"
   }
 }
