--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "importer": "babel-node index.js"
+    "importer": "node index.js"
   },
   "authors": [
     "Sebastian Kippe <sebastian@kip.pe>"
@@ -17,11 +17,13 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.3.0",
-    "babel": "^5.6.14",
     "bluebird": "^2.9.30",
     "commander": "^2.8.1",
     "glob": "^5.0.12",
     "progress": "^1.1.8",
-    "remotestoragejs": "remotestorage/remotestorage.js#eafe8ce4e975479c511c7685b1c9a70fcef0bebe"
-  }
+    "remotestorage-module-chat-messages": "^1.0.1",
+    "remotestoragejs": "^1.0.0",
+    "xml2js": "^0.4.19"
+  },
+  "devDependencies": {}
 }
